added reading time for articles

--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,7 @@
 <html>
-  <body>
-    <h1>Hello Extensions By Suraj Malinga</h1>
+  <body style="width: 400px;">
+    <h5>Hello Extensions By Suraj Malinga</h5>
     <script src="popup.js"></script>
+    <p>This is a popup window of the extension</p>
   </body>
 </html>
